force-app/main/default/objects/Car__c.object
<CustomObject>
    <fields>
        <fullName>Available_for_Rent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Available for Rent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Build_Year__c</fullName>
        <label>Build Year</label>
        <precision>4</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Car_Type_del__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Car Type</label>
        <referenceTo>Car_Type__c</referenceTo>
        <relationshipLabel>Car</relationshipLabel>
        <relationshipName>Car_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Car</relationshipLabel>
        <relationshipName>Car_Contact</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GeoLocation__c</fullName>
        <label>GeoLocation</label>
        <scale>7</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Mileage__c</fullName>
        <label>Mileage</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Per_Day_Rent__c</fullName>
        <label>Per Day Rent</label>
        <precision>7</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Picture__c</fullName>
        <label>Picture</label>
        <type>Url</type>
    </fields>
    <label>Car</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Car Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Car</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>